--- a/V2/RQ1.html
+++ b/V2/RQ1.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -43,38 +42,44 @@
           <td>
             <div class="btn btn-primary">Production</div>
           </td>
-          <td><div class="btn btn-danger">Impacts on economy, society, human beings,  environment</div></td>
+          <td><div class="btn btn-danger"> Negative effects on economy, society, individuals, and environment</div></td>
         </tr>
         <tr>
           <th scope="row" style="vertical-align: middle;">[4][5][20]</th>
           <td style="text-align: justify;">Green software is a software that generates as tiny e-waste as possible during its operation and development.</td>
           <td></td>
-          <td><div class="btn btn-danger">E-waste during operation and development</div></td>
+          <td><div class="btn btn-danger">E-waste</div></td>
         </tr>
 
         <tr>
           <th scope="row" style="vertical-align: middle;">[2][12][16]</th>
           <td style="text-align: justify;">Is a software that handles cost, environment, social, and human sustainability. Also, the requirements of the software must not trade off the capacity of future eras to fulfil their own particular needs.
           </td>
-          <td></td>
+          <td><div class="btn btn-primary">Capacity of future eras to fulfil their own particular needs</div></td>
           <td></td>
         </tr>
         <tr>
           <th scope="row" style="vertical-align: middle;">[6][15]</th>
           <td style="text-align: justify;"> Green SE aims to create reliable and durable software that meets users’ needs while reducing environmental impacts.
           </td>
-          <td><div class="btn btn-primary">Lifetime</div></td>
           <td>
-            <div class="btn btn-danger" style="margin-bottom: 5px">Environmental impact</div>
+            <div style="margin-bottom: 5px" class="btn btn-primary">Lifetime</div>
+            <div class="btn btn-primary">Reliability</div>
+          </td>
+          <td>
+            <div class="btn btn-danger" style="margin-bottom: 5px">Negative effects on environment</div>
           </td>
         </tr>
         <tr>
           <th scope="row" style="vertical-align: middle;">[9][16]</th>
           <td style="text-align: justify;">A sustainable software is a software that is long-lasting or long living and energy efficient in order to reduce the negative impact on the environment.</td>
-          <td><div class="btn btn-primary">Lifetime</div></td>
           <td>
-            <div class="btn btn-danger" style="margin-bottom: 5px">Environmental impact</div>
-            <div class="btn btn-danger">Energy consumption</div>
+            <div style="margin-bottom: 5px" class="btn btn-primary">Lifetime</div>
+            <div class="btn btn-primary">Energetic Efficiency</div>
+          </td>
+          <td>
+            <div class="btn btn-danger" style="margin-bottom: 5px">Negative effects on environment</div>
+            
           </td>
         </tr>
 
@@ -89,9 +94,10 @@
           <td style="text-align: justify;">Is a software that avoids non essential deliverables during software development. Also is a project that avoid extensive documentations. Is a software that is polymorphic and fits to meet the long-term goals of project. Is a software that requires less effort for development and consumes less energy.</td>
           <td><div style="margin-bottom: 5px" class="btn btn-primary">Polymorphic Design</div> <div class="btn btn-primary">Lifetime</div></td>
           <td>
-            <div style="margin-bottom: 5px" class="btn btn-danger">Non-essential deliverable during software development</div> 
+            <div style="margin-bottom: 5px" class="btn btn-danger">Non-essential deliverable</div> 
             <div style="margin-bottom: 5px" class="btn btn-danger">Extensive documentation</div> 
-            <div style="margin-bottom: 5px" class="btn btn-danger">Effort and energy consumed</div></td>
+            <div style="margin-bottom: 5px" class="btn btn-danger">Effort</div>
+            <div style="margin-bottom: 5px" class="btn btn-danger">Energy consumed</div></td>
           </tr>
           <tr>
             <th scope="row" style="vertical-align: middle;">[2]</th>
@@ -104,7 +110,7 @@
           <tr>
             <th scope="row" style="vertical-align: middle;">[2]</th>
             <td style="text-align: justify;">Economic sustainable software is a software that profits. The meaning of profit is the sum a person can spend amid a period and still be doing well toward the end of the period can characterize economic sustainability, as it decays on expending interest, as opposed to capital.  </td>
-            <td></td>
+            <td><div class="btn btn-primary">Profit</div></td>
             <td></td>
           </tr>
           <tr>
@@ -113,7 +119,7 @@
             <td></td>
             <td>
               <div style="margin-bottom: 5px" class="btn btn-danger">Natural resources usage</div>
-              <div class="btn btn-danger">Impacts on human work</div>
+              <div class="btn btn-danger">Negative effects on human work</div>
             </td>
           </tr>
           <tr>
@@ -126,7 +132,8 @@
             <th scope="row" style="vertical-align: middle;">[11]</th>
             <td style="text-align: justify;">Green software is a software product that over its whole life cycle are continuously assessed, documented, and used for further optimization of the software product.</td>
             <td>
-              <div class="btn btn-primary">Continuous evaluation, documentation</div>
+              <div style="margin-bottom: 5px" class="btn btn-primary">Continuous evaluation</div>
+              <div class="btn btn-primary">Documentation quality</div>
             </td>
             <td></td>
           </tr>
@@ -134,48 +141,51 @@
           <tr>
             <th scope="row" style="vertical-align: middle;">[12]</th>
             <td style="text-align: justify;">A green software is produced with a responsible use of resources. Also, it aims to mantain its viability during a maintenance period or replacement by a new system.</td>
-            <td class="btn btn-primary">Viability during a maintenance period or replacement by a new system</td>
+            <td class="btn btn-primary">Viability of maintenance or replacement</td>
             <td></td>
           </tr>
           <tr>
             <th scope="row" style="vertical-align: middle;">[19]</th>
             <td style="text-align: justify;">In enviromental dimension, a sustainable software promotes energy efficiency, minimizes the environmental impact of the processes it supports, and has a positive impact on social and/or economic sustainability.  A sustainable software is a software that follow the guidelines to produce more environment-friendly software. On the other hand, green by software refers to software developed for domains focusing on the preservation of the environment, as well as to software that helps to manage energy-intensive applications.</td>
-            <td></td>
             <td>
-              <div style="margin-bottom: 5px" class="btn btn-danger">Energy consumption</div>
-              <div class="btn btn-danger">Environmental impact</div>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row" style="vertical-align: middle;">[19]</th>
-            <td style="text-align: justify;">Sustainable software in two ways: as software code that is sustainable, agnostic of purpose; and also as a software purpose directed at achieving sustainability goals.</td>
-            <td> <div class="btn btn-primary">Software performance</div></td>
-            <td><div class="btn btn-danger">Resources consumption</div></td>
-          </tr>
-          <tr>
-            <th scope="row" style="vertical-align: middle;">[20]</th>
-            <td style="text-align: justify;">Green software uses computing resources more efficiently while mantaining or increasing overall performance.</td>
-            <td> <div class="btn btn-primary">Software performance</div></td>
-            <td><div class="btn btn-danger">Resources consumption</div></td>
-          </tr>
-          <tr>
-            <th scope="row" style="vertical-align: middle;">[21]</th>
-            <td style="text-align: justify;">Long-living software systems are sustainable if they can be cost-efficiently maintained and evolved over their entire lifecycle. The quality of software architectures determines sustainability to a large extent. A software-intensive system is long-living if it must be operated for more than 15 years. The opposite of a sustainable software system is a longliving system that cannot be adapted to changing requirements and environments due to unjustifiable costs or even technical infeasibility. The architecture of a sustainable system may evolve during its life-cycle, but the fulfillment of customer requirements within timing, budget, and quality constraints must be assured.</td>
-            <td>
-              <div style="margin-bottom: 5px" class="btn btn-primary">Lifetime</div>
-              <div style="margin-bottom: 5px" class="btn btn-primary">Adaptability</div>
-              <div style="margin-bottom: 5px" class="btn btn-primary">Optimization</div>
-            </td>
-            <td></td>
-          </tr>
-        </tbody>
-      </table>
+              <div style="margin-bottom: 5px" class="btn btn-primary">Energetic efficiency</div></td>
+              <td>
+                <div class="btn btn-danger">Negative effects on economy, society and environment</div>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row" style="vertical-align: middle;">[19]</th>
+              <td style="text-align: justify;">Sustainable software in two ways: as software code that is sustainable, agnostic of purpose; and also as a software purpose directed at achieving sustainability goals.</td>
+              <td> <div class="btn btn-primary">Polymorphic design</div></td>
+              <td></td>
+            </tr>
+            <tr>
+              <th scope="row" style="vertical-align: middle;">[20]</th>
+              <td style="text-align: justify;">Green software uses computing resources more efficiently while mantaining or increasing overall performance.</td>
+              <td> 
+                <div  style="margin-bottom: 5px" class="btn btn-primary">Software performance</div>
+                <div class="btn btn-primary">Resources consumption efficiency</div>
+              </td>
+              <td></td>
+            </tr>
+            <tr>
+              <th scope="row" style="vertical-align: middle;">[21]</th>
+              <td style="text-align: justify;">Long-living software systems are sustainable if they can be cost-efficiently maintained and evolved over their entire lifecycle. The quality of software architectures determines sustainability to a large extent. A software-intensive system is long-living if it must be operated for more than 15 years. The opposite of a sustainable software system is a longliving system that cannot be adapted to changing requirements and environments due to unjustifiable costs or even technical infeasibility. The architecture of a sustainable system may evolve during its life-cycle, but the fulfillment of customer requirements within timing, budget, and quality constraints must be assured.</td>
+              <td>
+                <div style="margin-bottom: 5px" class="btn btn-primary">Lifetime</div>
+                <div style="margin-bottom: 5px" class="btn btn-primary">Adaptability</div>
+                <div style="margin-bottom: 5px" class="btn btn-primary">Architecture quality</div>
+              </td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
 
-      <a href="index.html" class="btn btn-warning">Return to index</a>
-      <a href="reference.html" class="btn btn-warning">See references</a>
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    </div>
-  </body>
-  </html>
+        <a href="index.html" class="btn btn-warning">Return to index</a>
+        <a href="reference.html" class="btn btn-warning">See references</a>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+      </div>
+    </body>
+    </html>
