--- a/trash/index.html
+++ b/trash/index.html
@@ -33,28 +33,27 @@
       <tr>
         <td>RQ1</td>
         <td>Definitions of sustainable software from the literature</td>
-        <td><a href="RQ1-definitions.html">Link</a></td>
+        <td><a href="RQ1.html">Link</a></td>
       </tr>
       <tr>
-        <td>RQ1.1</td>
+        <td>RQ2</td>
         <td>Resources used to produce sustainable software</td>
-        <td><a href="RQ1.1-resources.html">Link</a></td>
+        <td><a href="RQ2.html">Link</a></td>
       </tr>
       <tr>
-        <td>RQ1.2</td>
+        <td>RQ3</td>
         <td>Success and Risk factors and their classification</td>
-        <td><a href="RQ1.2-criticalfactors.html">Link</a></td>
-      </tr>
-      
-      <tr>
-        <td>RQ2</td>
-        <td>Approaches proposed to sustainable software</td>
-        <td><a href="RQ2-approaches.html">Link</a></td>
+        <td><a href="RQ3.html">Link</a></td>
       </tr>
       <tr>
-        <td>RQ2</td>
+        <td>RQ4</td>
         <td>Guidelines to construct a sustainable software</td>
-        <td><a href="RQ2-guidelines.html">Link</a></td>
+        <td><a href="RQ4.html">Link</a></td>
+      </tr>
+      <tr>
+        <td>RQ5</td>
+        <td>Approaches proposed to sustainable software</td>
+        <td><a href="RQ5.html">Link</a></td>
       </tr>
       <tr>
         <td>References</td>
