--- a/index.html
+++ b/index.html
@@ -1,71 +1,119 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <title>A Tertiary Study on Sustainable Software Characteristics</title>
-</head>
-<body>
-  <div class="container">
-    <h1 class="jumbotron" style="text-align:center"> A Tertiary Study on Sustainable Software Characteristics</h1>
-    <div style="margin: 40px; text-align: justify;" >
-      <p>
-        <b>Context:</b>Sustainability is a topic that started to be discussed in the area of ecology in the 1980s. This topic proved to be multidisciplinary and other areas realized the need to produce sustainable products. Among these areas, Software Engineering has also realized that it is necessary to include sustainability as a quality requirement. The currently published literature has several secondary studies that bring together several characteristics of sustainable software, however, these initiatives do not have a summary where it is possible to fully understand the characteristics of sustainable software.<br>
-        <b>Objective:</b>in this paper we aim to understand what are the characteristics of sustainable software and what initiatives are available in the literature to support the process of building sustainable software.<br>
-        <b>Method:</b>to achieve this goal we conducted a tertiary study. Our study followed a defined process and a search protocol. The analysis considers the different studies selected for evidence in the literature of characteristics of sustainable software.<br>
-        <b>Results:</b>the main contributions of this work include 17 different definitions for sustainable software; 5 resources consumed to build software; 61 factors that influence the success or failure of sustainable software production; 277 different guidelines and 117 approaches (eg processes, methods, tools, frameworks) that support the construction of sustainable software. <br>
-        <b>Conclusion:</b>the search for sustainability in the construction of software has received a lot of attention in recent years. The secondary studies conducted proposed several advances to the state of the art, and several initiatives have already been applied and evaluated.<br>
-      </p>   
-    </div>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Sustainable Software Systems: The Core Characteristics and Their Achievement</title>
+  </head>
 
-    <h2 class="jumbotron" style="text-align: center">Contents available</h2>
 
-    <table class="table table-hover table-striped">
-      <tr class="thead-dark">
-        <th>Resource</th>
-        <th>Description</th>
-        <th>Link</th>
-      </tr>
-      <tr>
-        <td>RQ1</td>
-        <td>Definitions of sustainable software from the literature</td>
-        <td><a href="view/RQ1-definitions.html">Link</a></td>
-      </tr>
-      <tr>
-        <td>RQ2</td>
-        <td>Resources used to produce sustainable software</td>
-        <td><a href="view/RQ1.1-resources.html">Link</a></td>
-      </tr>
-      <tr>
-        <td>RQ3</td>
-        <td>Success and Risk factors and their classification</td>
-        <td><a href="view/RQ1.2-criticalfactors.html">Link</a></td>
-      </tr>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item ">
+          <a class="nav-link active" href="index.html">Index <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item  ">
+          <a class="nav-link" title="RQ1 - summarizes the current understandings to define what are exactly sustainable software systems" href="view/RQ1-understandings.html">Understandings</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" title="RQ2 - summarizes the resources taken into account when considering sustainability in software systems" href="view/RQ2-resources.html">Resources</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" title="RQ3 - Summarizes the critical factors that hamper or contribute for developing sustainable software" href="view/RQ3-criticalfactors.html">Critical Factors</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" title="RQ4.1 - summarizes approaches mentioned in recent literature to achieve sustainable software" href="view/RQ4.1-approaches.html">Approaches</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" title="RQ4.2 - summarizes guidelines to achieve sustainable software" href="view/RQ4.2-guidelines.html">Guidelines</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" title="See the full list of references" href="view/references.html">References</a>
+        </li>
+
+      </ul>
       
-      <tr>
-        <td>RQ4</td>
-        <td>Approaches proposed to sustainable software</td>
-        <td><a href="view/RQ2-approaches.html">Link</a></td>
-      </tr>
-      <tr>
-        <td>RQ4</td>
-        <td>Guidelines to construct a sustainable software</td>
-        <td><a href="view/RQ2-guidelines.html">Link</a></td>
-      </tr>
-      <tr>
-        <td>References</td>
-        <td>Table of references</td>
-        <td><a href="view/references.html">Link</a></td>
-      </tr>
-    </table>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </div>
-</body>
-</html>
+    </div>
+  </nav>
+  <body>
+    <div class="container">
+      <h1 class="jumbotron" style="text-align:center"> Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
+      <div style="margin: 40px; text-align: justify;" >
+        <p>
+          <p><b>Context:</b> Sustainability is a cross-disciplinary research topic that has drawn attention from various knowledge areas, such as ecology, engineering, healthcare, and social sciences, and has supported the development of a more sustainable and modern world. Computer science area has also explored such a topic aiming at creating sustainable software systems.</p>
+          <p><b>Problem:</b> However, there is no consensus of what sustainable software systems are exactly and which are their current achievements to support a more sustainable world.</p> 
+          <p><b>Objective:</b> The main contribution of this paper is to depict the core characteristics of sustainable software systems and the means to achieve them.</p>
+          <p><b>Results:</b> To do that, we systematically enquired the literature on sustainability in software systems and found 242 studies, from which 24 were relevant for our deep analysis. Our results summarize 17 different understandings of sustainable software systems and present evidence that sustainable software is currently mainly concerned to preserve four resources (electric energy, human resources, monetary cost, and production time). As means to achieve sustainability in software systems, we outline 68 critical factors and 98 possible means to achieve sustainability (guidelines, tools, methods, metrics, models, and frameworks). We interpreted, selected, and grouped this multiplicity of initiatives to present the current research endeavors in this area and highlight current gaps that still need to be better investigated.</p>
+          <p><b>Conclusions:</b> No matter the application domains of the software systems, sustainability must be treated as a core concern in software development together with both a better alignment between academia and industry and a change in the mindset of practitioners concerning sustainable system development.</p> 
+        </p>   
+      </div>
+
+      <h2 class="jumbotron" style="text-align: center">Replication package</h2>
+
+      <p>Systematic Literature Reviews process need to be transparent, facilitate the access to data, consequently, enhance the reproducibility and auditability. Therefore, the selection of primary studies selection, data extraction and data analysis spreadsheets are also available on the link:</p>
+      <ul>
+        <li><a href="https://github.com/CSM-Research/02-SLR-SsCh/ReplicationPackage/ReplicationPackage.rar">Click here to download</a></li>
+      </ul>
+
+      <p>To checkout our repository on github acess:</p>
+
+      <ul>
+        <li>
+          <a href="https://github.com/CSM-Research/02-SLR-SsCh">Click here to access our repository on github.</a>
+        </li>
+      </ul>
+
+      <h2 class="jumbotron" style="text-align: center">Contents available</h2>
+
+      <table class="table table-hover table-striped">
+        <tr class="thead-dark">
+          <th>Resource</th>
+          <th>Description</th>
+          <th>Link</th>
+        </tr>
+        <tr>
+          <td>RQ1</td>
+          <td>Definitions of sustainable software from the literature</td>
+          <td><a href="view/RQ1-understandings.html">Link</a></td>
+        </tr>
+        <tr>
+          <td>RQ2</td>
+          <td>Resources used to produce sustainable software</td>
+          <td><a href="view/RQ2-resources.html">Link</a></td>
+        </tr>
+        <tr>
+          <td>RQ3</td>
+          <td>Success and Risk factors and their classification</td>
+          <td><a href="view/RQ3-criticalfactors.html">Link</a></td>
+        </tr>
+
+        <tr>
+          <td>RQ4</td>
+          <td>Approaches proposed to sustainable software</td>
+          <td><a href="view/RQ4.1-approaches.html">Link</a></td>
+        </tr>
+        <tr>
+          <td>RQ4</td>
+          <td>Guidelines to construct a sustainable software</td>
+          <td><a href="view/RQ4.2-guidelines.html">Link</a></td>
+        </tr>
+        <tr>
+          <td>References</td>
+          <td>Table of references</td>
+          <td><a href="view/references.html">Link</a></td>
+        </tr>
+      </table>
+
+    </div>
+  </body>
+  </html>
