--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Sustainable Software Systems: The Core Characteristics and Their Achievement</title>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <script type="text/javascript" src="resources/js/functions.js"></script>
   </head>
 
 
@@ -47,7 +55,7 @@
   </nav>
   <body>
     <div class="container">
-      <h1 class="jumbotron" style="text-align:center"> Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
+      <h1 class="jumbotron" style="text-align:center; margin-top:2em"> Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
       <div style="margin: 40px; text-align: justify;" >
         <p>
           <p><b>Context:</b> Sustainability is a cross-disciplinary research topic that has drawn attention from various knowledge areas, such as ecology, engineering, healthcare, and social sciences, and has supported the development of a more sustainable and modern world. Computer science area has also explored such a topic aiming at creating sustainable software systems.</p>
